updated images to url

--- a/index.html
+++ b/index.html
@@ -100,12 +100,12 @@
             
             .hero-slide:nth-child(1) {
                 background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.5)),
-                url('LASGIDI1.JPG') center/cover;
+                url('https://res.cloudinary.com/dmhy8rk7q/image/upload/v1761193358/LASGIDI1_nh0rs2.jpg') center/cover;
             }
             
             .hero-slide:nth-child(2) {
                 background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.5)),
-                url('LASGIDI2.JPG') center/cover;
+                url('https://res.cloudinary.com/dmhy8rk7q/image/upload/v1761193358/LASGIDI2_tzndnv.jpg') center/cover;
             }
         }
 
